--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "author": "Robson",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.2",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
     "twilio": "^4.11.1"
   }
 }
