--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Robson",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
